<resources>
    <string name="app_name">Chaat Bae</string>
    <string name="page_title">Today\'s Menu</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="search">search</string>
    <string name="content_descritpion_search">content_descritpion_search</string>
    <string name="more">more</string>
    <string name="content_descritpion_more">content_descritpion_more</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="rupee_symbol">\u20B9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>










