<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/favorite"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        android:contentDescription="@string/content_descritpion_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/more"
        android:contentDescription="@string/content_descritpion_more"
        app:showAsAction="ifRoom"/>
</menu>